add endpoint "/user/me"
