# internal/handler/v1/handler.go
@@ -23,16 +23,26 @@ func New(meta *MetaHandler, user *UserHandler, auth *AuthHandler) *Handler {
 
 var _ v1Generated.ServerInterface = (*Handler)(nil)
 
+// Meta
+
 func (h *Handler) GetHealth(w http.ResponseWriter, r *http.Request) {
 	h.meta.GetHealth(w, r)
 }
 
-func (h *Handler) LoginUser(w http.ResponseWriter, r *http.Request) {
-	h.auth.LoginUser(w, r)
-}
+// User
 
 func (h *Handler) RegisterUser(w http.ResponseWriter, r *http.Request) {
 	h.user.RegisterUser(w, r)
+}
+
+func (h *Handler) GetMe(w http.ResponseWriter, r *http.Request) {
+	h.user.GetMe(w, r)
+}
+
+// Auth
+
+func (h *Handler) LoginUser(w http.ResponseWriter, r *http.Request) {
+	h.auth.LoginUser(w, r)
 }
 
 func (h *Handler) UpdateRefreshToken(w http.ResponseWriter, r *http.Request) {
